--- a/Translator/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Translator/Resources/zh-Hans.lproj/Localizable.strings
@@ -19,7 +19,7 @@
 "File Path" = "文件路径";
 "Write failed" = "写入失败";
 "Done" = "确定";
-"App Desc" = "\tTranslator 可以帮助你快速的将 `.csv` 表格内容转为 iOS项目中对应国家的. lproj文件，以下为使用步骤：\n• 首先设置存储目录；\n• 然后选择 .csv 文件，文件格式需要按照右下角生成的格式一致；\n• 最后点击 开始解析 即可。\n自动操作\n• 自动替换%s为%@；\n• 自动将英文引号添加转义，即：；";
+"App Desc" = "\tTranslator 可以帮助你快速的将 `.csv` 表格内容转为 iOS项目中对应国家的. lproj文件，以下为使用步骤：\n• 首先设置存储目录；\n• 然后选择 .csv 文件，文件格式需要按照右下角生成的格式一致；\n• 最后点击 开始解析 即可。\n自动操作\n• 自动替换%s为%@；\n• 自动将英文引号添加转义，即：\"转为\\\"；";
 "Preview .csv format" = "预览.csv格式";
 "Start parsing" = "开始解析";
 "Open" = "打开";
