--- a/Translator/Resources/en.lproj/Localizable.strings
+++ b/Translator/Resources/en.lproj/Localizable.strings
@@ -19,7 +19,6 @@
 "File Path" = "File Path";
 "Write failed" = "Write failed";
 "Done" = "Done";
-"App Desc" = "\tTranslator can help you quickly convert the contents of the `.csv` table into the corresponding .lproj file in the iOS project. The following steps are used: \n• First set the storage path; \n• Then select the .csv file, file The format needs to be consistent with the format generated in the lower right corner; \n• Finally click to start parsing.";
-"Preview .csv format" = "Preview .csv format";
+"App Desc" = "Translator can help you quickly convert the contents of the `.csv` table into the .lproj file of the corresponding country in the iOS project. The following are the steps to use: \n• Multi-language annotation (optional): used before each multi-language Add comments;\n• First set the storage directory;\n• Then select the .csv file. The file format must be consistent with the format generated in the lower right corner;\n• Finally, click to start parsing. \n\nAutomatic operation\n1. Automatically replace %s with %@;\n2. Automatically escape English quotes, that is: \"convert\\\";\n3. Support replacing {number} with %@";
 "Start parsing" = "Start parsing";
 "Open" = "Open";
